name:                rdp-uri
version:             0.1.0.0
synopsis:            Constructs URIs as per the RDP URI specification
description:         Please see README.md
homepage:            http://github.com/nkpart/rdp-uri#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RDPURI
  build-depends:       base >= 4.7 && < 5
                     , http-types
                     , text
                     , lens
                     , bytestring
  default-language:    Haskell2010

test-suite rdp-uri-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rdp-uri
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkpart/rdp-uri
